Tue Mar 20 02:04:51 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: More tests of geospatial API.

Sun Mar 18 00:38:48 GMT 2012  Dan Colish <dcolish@gmail.com>

	* .gitignore: Ignore doxygen artifacts

Wed Mar 14 02:25:51 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.9 and ChangeLog for 1.3.0.

Tue Mar 13 22:41:01 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: Test constructing XapianLatLongCoord.

Tue Mar 13 00:32:37 GMT 2012  Olly Betts <olly@survex.com>

	* php/add-php-type-hints: Fix typo "XapianStemmer" -> "XapianStem".
	* php/smoketest.php: Add regression test coverage.

Thu Mar 08 05:51:38 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/: Enable warnings for all test cases and make them fatal.

Thu Mar 08 05:37:47 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/symbol-test.t: Remove lingering reference to @args which is
	  no longer set, and enable warnings and make them fatal so we don't
	  regress on this.

Fri Jan 27 01:21:18 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/10query.t: Check that Search::Xapian::Query->new("") works.

Fri Jan 27 01:19:45 GMT 2012  Olly Betts <olly@survex.com>

	* perl/perl.i: Fix Search::Xapian->new() to work.
	* perl/t/10query.t: Add testcase for this.

Thu Jan 26 23:41:55 GMT 2012  Olly Betts <olly@survex.com>

	* perl/perl.i: Add "use Carp;" where we use functions from that module.
	* perl/t/10query.t: Add regression test.

Fri Jan 20 23:53:12 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/document.t,perl/t/index.t: Add tests of Document::get_docid().

Thu Jan 19 00:19:52 GMT 2012  Olly Betts <olly@survex.com>

	* java/Makefile.am: Update list of generated files for the geospatial
	  API.

Thu Jan 19 00:17:11 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Ignore unserialise() variant taking const char**
	  and Database::check() variant taking std::ostream &.

Wed Jan 18 13:43:55 GMT 2012  Olly Betts <olly@survex.com>
